Kubernetes/Services-types/Ingress/fr-end.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: kareem32/app-test:1.0.0
          ports:
            - containerPort: 80
